2006-08-05  Eli Zaretskii  <eliz@gnu.org>

	* buff-menu.el (list-buffers-noselect): For Info buffers, use
	"(file)node" instead of the file name.

2006-08-05  Richard Stallman  <rms@gnu.org>

	* faces.el (escape-glyph): Doc fix.

2006-08-04  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-font): Improve docstring
	and error message.  Use frame-parameter (not frame-parameters).

2006-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/gud.el (gdb-script-font-lock-syntactic-keywords):
	Correctly mark the end-of-docstring char.

2006-08-03  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-to-column): Constrain move-to-column to
	current field.

2006-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font-lock.el (font-lock-beg, font-lock-end)
	(font-lock-extend-region-functions): New vars.
	(font-lock-extend-region-multiline)
	(font-lock-extend-region-wholelines): New functions.
	(font-lock-default-fontify-region): Use them.
	(font-lock-extend-jit-lock-region-after-change): Only round up
	if font-lock-default-fontify-region will do it as well.

	* font-lock.el (font-lock-extend-after-change-region-function):
	Rename from font-lock-extend-region-function.
	(font-lock-extend-region): Remove by inlining at call sites.
	(font-lock-after-change-function): Don't needlessly round up to a whole
	number of lines.
	(font-lock-extend-jit-lock-region-after-change): Be more careful about
	the boundary conditions and the interactions between the various ways
	to extend the region.

2006-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* jit-lock.el (jit-lock-fontify-now): Preserve the buffer's
	modification status when forcing the second redisplay.

2006-08-03  Kim F. Storm  <storm@cua.dk>

	* edmacro.el (edmacro-fix-menu-commands): Ignore switch-frame.

2006-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs-util.el (cvs-get-buffer-create): Obey `noreuse' even if `name'
	doesn't look like a file name.
